--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -13,6 +13,16 @@
         android:gravity="center"
         android:layout_marginBottom="32dp" />
 
+    <!-- Admin Email -->
+    <EditText
+        android:id="@+id/et_admin_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter admin email"
+        android:inputType="textEmailAddress"
+        android:layout_marginBottom="16dp" />
+
+    <!-- Admin Password -->
     <EditText
         android:id="@+id/et_admin_password"
         android:layout_width="match_parent"
@@ -20,6 +30,7 @@
         android:hint="Enter admin password"
         android:inputType="textPassword"
         android:layout_marginBottom="16dp" />
+
 
     <Button
         android:id="@+id/btn_admin_login"
