--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -33,7 +33,7 @@
         android:inputType="textPassword"
         android:layout_marginBottom="24dp"/>
 
-
+    <!-- Register Button -->
     <Button
         android:id="@+id/btn_register"
         android:layout_width="match_parent"
