--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,17 +27,21 @@
         android:layout_height="wrap_content"
         android:text="Login"/>
 
+    <!-- Forgot Password -->
     <Button
-    android:id="@+id/btn_forgot_password"   \\forgot-Password
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Forgot Password?"
-    android:layout_marginTop="12dp"/>
-
+        android:id="@+id/btn_forgot_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Forgot Password?"
+        android:layout_marginTop="16dp"/>
+    
+    <!-- Go to Register -->
     <Button
         android:id="@+id/btn_go_to_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Go to Register"
         android:layout_marginTop="12dp"/>
+
+        
 </LinearLayout>
