--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,60 @@
 <resources>
     <style name="Theme.ResumeBoost" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize your theme colors here if you want -->
+     <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/primary_variant</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+    <!-- Titles -->
+    <style name="TitleText">
+        <item name="android:textSize">26sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/text_primary</item>
+    </style>
+
+    <style name="SubTitleText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/text_secondary</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <!-- EditText Style -->
+    <style name="AppEditText">
+        <item name="android:padding">12dp</item>
+        <item name="android:background">@android:drawable/edit_text</item>
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <!-- Primary Button Style -->
+    <style name="PrimaryButton">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:backgroundTint">@color/primary</item>
+        <item name="android:textColor">@color/on_primary</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <!-- Secondary Button Style -->
+    <style name="SecondaryButton">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:backgroundTint">@color/secondary</item>
+        <item name="android:textColor">@color/on_secondary</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <!-- Admin Buttons -->
+    <style name="AdminButtonRed">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:backgroundTint">@color/admin_red</item>
+        <item name="android:textColor">@color/on_primary</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="AdminButtonGreen">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:backgroundTint">@color/admin_green</item>
+        <item name="android:textColor">@color/on_primary</item>
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
