--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="24dp"
-    android:gravity="center_horizontal">
+    android:fillViewport="true">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register User"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="32dp"/>
-
-    <!-- Email input -->
-
-    <EditText
-        android:id="@+id/et_email"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your email"
-        android:inputType="textEmailAddress"
-        android:layout_marginBottom="24dp"/>
-    
-    <!-- Password input -->
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter your password"
-        android:inputType="textPassword"
-        android:layout_marginBottom="24dp"/>
+        android:orientation="vertical"
+        android:padding="24dp"
+        android:gravity="center_horizontal">
 
-    <!-- Register Button -->
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Register"/>
+        <!-- Title -->
+        <TextView
+            style="@style/TitleText"
+            android:text="Register User"
+            android:layout_marginBottom="32dp"/>
 
-</LinearLayout>
+        <!-- Email -->
+        <EditText
+            style="@style/AppEditText"
+            android:id="@+id/et_email"
+            android:hint="Enter your email"
+            android:layout_marginBottom="24dp"/>
+
+        <!-- Password -->
+        <EditText
+            style="@style/AppEditText"
+            android:id="@+id/et_password"
+            android:hint="Enter your password"
+            android:inputType="textPassword"
+            android:layout_marginBottom="32dp"/>
+
+        <!-- Register Button -->
+        <Button
+            style="@style/PrimaryButton"
+            android:id="@+id/btn_register"
+            android:text="Register"/>
+
+    </LinearLayout>
+</ScrollView>
