--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,15 @@
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
-
+    <!-- EditText Style -->
+    <style name="AppEditText" parent="Widget.Material3.TextInputLayout.OutlinedBox">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:textColor">#000000</item>
+    <item name="android:textSize">16sp</item>
+    <item name="android:padding">12dp</item>
+    </style>
+    
     <style name="SubTitleText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
