--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,13 +34,13 @@
         <item name="android:gravity">center</item>
     </style>
     <!-- EditText Style -->
-    <style name="AppEditText" parent="Widget.Material3.TextInputLayout.OutlinedBox">
+    <style name="AppEditText" parent="Widget.Material3.TextInputEditText.OutlinedBox">
     <item name="android:layout_width">match_parent</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:textColor">#000000</item>
     <item name="android:textSize">16sp</item>
     <item name="android:padding">12dp</item>
-    </style>
+</style>
     
     <style name="SubTitleText">
         <item name="android:layout_width">match_parent</item>
