--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,44 +8,35 @@
 
     <style name="Theme.ResumeWriterApp" parent="Base.Theme.ResumeWriterApp" />
 
-    <!-- Button Styles -->
-    <style name="PrimaryButton">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+    <!-- Button Styles (REMOVE layout attributes from styles) -->
+    <style name="PrimaryButton" parent="Widget.Material3.Button">
         <item name="android:textSize">16sp</item>
         <item name="android:backgroundTint">#2196F3</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
-    <style name="SecondaryButton">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="SecondaryButton" parent="Widget.Material3.Button">
         <item name="android:textSize">16sp</item>
         <item name="android:backgroundTint">#4CAF50</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
-    <!-- Text Styles -->
+    <!-- Text Styles (REMOVE layout attributes from styles) -->
     <style name="TitleText">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
-    <!-- EditText Style -->
-    <style name="AppEditText" parent="Widget.Material3.TextInputEditText.OutlinedBox">
-    <item name="android:layout_width">match_parent</item>
-    <item name="android:layout_height">wrap_content</item>
-    <item name="android:textColor">#000000</item>
-    <item name="android:textSize">16sp</item>
-    <item name="android:padding">12dp</item>
-</style>
-    
+
     <style name="SubTitleText">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">16sp</item>
         <item name="android:gravity">center</item>
+    </style>
+
+    <!-- EditText Style (REMOVE layout attributes) -->
+    <style name="AppEditText" parent="Widget.Material3.TextInputEditText.OutlinedBox">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">12dp</item>
     </style>
 </resources>
